--- a/SimpsonBook/Base.lproj/Main.storyboard
+++ b/SimpsonBook/Base.lproj/Main.storyboard
@@ -1,24 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nJN-s2-Drv">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SimpsonBook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="1g3-d8-4Gm">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1g3-d8-4Gm" secondAttribute="trailing" id="34v-yu-Nhg"/>
+                            <constraint firstItem="1g3-d8-4Gm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="GTI-Mn-rXx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1g3-d8-4Gm" secondAttribute="bottom" id="iho-ne-bh0"/>
+                            <constraint firstItem="1g3-d8-4Gm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="scN-28-VgY"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="mS2-cg-DFm"/>
+                    <connections>
+                        <outlet property="tableView" destination="1g3-d8-4Gm" id="3n0-Fu-wgl"/>
+                        <segue destination="xbL-Zc-uxS" kind="show" identifier="toDetailsVC" id="Kys-eE-qkf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="978" y="4"/>
+        </scene>
+        <!--DetailsVC-->
+        <scene sceneID="wh9-LQ-QK7">
+            <objects>
+                <viewController id="xbL-Zc-uxS" customClass="DetailsVC" customModule="SimpsonBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oJG-1h-3gm">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CcZ-87-Brv">
+                                <rect key="frame" x="46" y="140" width="300" height="286"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5qf-9I-1R0">
+                                <rect key="frame" x="89" y="452" width="214" height="53"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="jig-fn-Pcg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="job label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M27-pm-Fij">
+                                <rect key="frame" x="89" y="523" width="214" height="53"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="UBM-Rg-nq8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="DFd-hw-HBt"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5qf-9I-1R0" firstAttribute="trailing" secondItem="M27-pm-Fij" secondAttribute="trailing" id="42L-X0-2HW"/>
+                            <constraint firstItem="DFd-hw-HBt" firstAttribute="bottom" secondItem="M27-pm-Fij" secondAttribute="bottom" constant="242" id="Enm-Gd-ub1"/>
+                            <constraint firstItem="CcZ-87-Brv" firstAttribute="leading" secondItem="DFd-hw-HBt" secondAttribute="leading" constant="46" id="OJU-8Y-e2W"/>
+                            <constraint firstItem="5qf-9I-1R0" firstAttribute="top" secondItem="CcZ-87-Brv" secondAttribute="bottom" constant="26" id="QJE-WG-y6x"/>
+                            <constraint firstItem="M27-pm-Fij" firstAttribute="top" secondItem="5qf-9I-1R0" secondAttribute="bottom" constant="18" id="XAQ-pq-kHz"/>
+                            <constraint firstItem="CcZ-87-Brv" firstAttribute="centerX" secondItem="oJG-1h-3gm" secondAttribute="centerX" id="ifn-lx-FHb"/>
+                            <constraint firstItem="CcZ-87-Brv" firstAttribute="top" secondItem="DFd-hw-HBt" secondAttribute="top" constant="37" id="ivd-jt-lxP"/>
+                            <constraint firstItem="5qf-9I-1R0" firstAttribute="leading" secondItem="DFd-hw-HBt" secondAttribute="leading" constant="89" id="jQZ-wc-eg0"/>
+                            <constraint firstItem="CcZ-87-Brv" firstAttribute="centerX" secondItem="5qf-9I-1R0" secondAttribute="centerX" id="sXH-ci-SxM"/>
+                            <constraint firstItem="5qf-9I-1R0" firstAttribute="leading" secondItem="M27-pm-Fij" secondAttribute="leading" id="tlV-oc-Fgz"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sFp-Dg-eEw"/>
+                    <connections>
+                        <outlet property="imgView" destination="CcZ-87-Brv" id="bSQ-yi-rLB"/>
+                        <outlet property="lblJob" destination="M27-pm-Fij" id="wXr-5F-KZD"/>
+                        <outlet property="lblName" destination="5qf-9I-1R0" id="cZn-4L-z3i"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CKd-Xo-tsl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1805.3435114503816" y="3.5211267605633805"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="peu-tP-Mkf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nJN-s2-Drv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zBW-LQ-XPm">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="roj-3k-W8e"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oCM-DE-qwb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.64122137404578" y="3.5211267605633805"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
